# twitch-hub

./: .claudeignore  .dockerignore  .env.example  .env.production.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  Caddyfile  PRD.md  README.md  XP-PRD.md  docker-compose.dev.yml  docker-compose.posthog.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  prompt_template.md  ralph.sh  turbo.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  publish.yml
.ralph/: progress.md  tasks.json
.ralph/logs/: iter_10_output.txt  iter_10_response.json  iter_11_output.txt  iter_11_response.json  iter_12_output.txt  iter_12_response.json  iter_13_output.txt  iter_13_response.json  iter_14_output.txt  iter_14_response.json  iter_15_output.txt  iter_15_response.json  iter_1_output.txt  iter_1_response.json  iter_2_output.txt  iter_2_response.json  iter_3_output.txt  iter_3_response.json  iter_4_output.txt  iter_4_response.json  iter_5_output.txt  iter_6_output.txt  (+8 more)
docs/: deployment.md  gamification.md  index.md  package.json
infra/: README.md  config.py  create_server.py  deploy.py  dns.py  inventory.py  namecheap.py  provision.py  pyproject.toml  run.py  state.py  ui.py  upgrade.py  upgrade_rollback.py  wizard.py
infra/scripts/: auto-upgrade.sh
infra/tasks/: __init__.py  app_clone.py  app_deploy.py  app_env.py  app_upgrade.py  docker.py  firewall.py  ssh.py  swap.py  system.py  users.py
infra/templates/: env.production.j2  sshd_config.j2
scripts/: deploy.sh  dev-init.sh  resolve-server-deps.ts
(+301 files in other folders)
