[project]
name = "twitch-hub-infra"
version = "0.1.0"
description = "Infrastructure automation for Twitch Hub"
requires-python = ">=3.10"
dependencies = [
    "pyinfra>=3,<4",
    "hcloud>=2,<3",
    "python-dotenv>=1,<2",
    "jinja2>=3,<4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
